Corrected handling of quotes in bar graph labels.

--- a/D3Plot.cabal
+++ b/D3Plot.cabal
@@ -35,3 +35,5 @@ library
                , shakespeare-js
                , blaze-html
                , directory
+               , aeson
+               , MissingH
